--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "symfony/console": "2.6.*"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master",
-    "phpunit/phpunit": "4.4.*"
+    "roave/security-advisories": "dev-master"
   },
   "autoload": {
     "files": [
